# masters-crm

./: README.md  pyproject.toml
masters_crm/: manage.py
masters_crm/masters_crm/: asgi.py  settings.py  urls.py  wsgi.py
